Changes for 3.2.0beta3

New features:

Bug fixes:
..F....... [ZBX-11071] fixed closing success and error messages in IE (Cemeris)
..F....... [ZBXNEXT-3101] fixed undefined index when adding a message to user in action operations (Gunars)

--------------------------------------------------------------------------------
Changes for 3.2.0beta2

New features:
..F....... [ZBXNEXT-3201] added icon in Monitoring->Problems view to show who close problem; implemented new information icons (Pavel, Sasha)
..F....... [ZBXNEXT-3201] added blinking on CLOSING state in Monitoring->Problems view (Sasha)
..F....... [ZBXNEXT-3201] added "Show details" filter option in Monitoring->Problems view (Sasha)
..F....... [ZBXNEXT-3201] added displaying of recovery actions in Monitoring->Problem view (Sasha)
..F....... [ZBXNEXT-3409] replaced drop-down controls with modern radio buttons in several forms (Alexei)
...G...... [ZBXNEXT-3389] removed value length limitation in zabbix_sender when reading data from file/stream (wiper)

Bug fixes:
........S. [ZBX-11148] fixed suppressing of escalations when an event is closed by event correlation operation 'close new' (wiper)
A......... [ZBX-11020] fixed "host.create" so that both "inventory" and "inventory_mode" are optional (asaveljevs)
...G...... [ZBX-9124] changed getting OS name by item system.sw.os[name] (Sergejs)
....I..... [ZBX-11132] added database patch to fill all required fields in "problem" table (wiper)
....I....T [ZBX-10476] fixed several issues with 'service.discovery' lld rule in template 'Template OS Windows' (Sergejs)
........S. [ZBX-11124] fixed memory leak in process of deleting hosts, which occurs during lld processing (Sergejs)
..F....... [ZBX-11045] fixed action audit log "Recipient" column name (Sasha)
A......... [ZBXNEXT-3201] fixed possible SQL errors in problem.get() method (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.0beta1

New features: